--- a/profil3.html
+++ b/profil3.html
@@ -53,27 +53,28 @@
                     <tr> 
                     <td> NiM </td>
                     <td> : </td>
-                    <td> &nbsp;</td>
+                    <td> &nbsp; 09021181520137</td>
                     </tr>
                     <tr>
                     <td> Tempat/Tgl Lahir&nbsp; </td>
                     <td> : </td>
-                    <td> &nbsp; </td>
+                    <td> &nbsp;Baturaja, 15 Oktober 1997 </td>
                     </tr>
                     <tr>
                     <td> Email </td>
                     <td> : </td>
-                    <td> &nbsp; </td>
+                    <td> &nbsp;oktrariapermatasari15@gmail.com </td>
                     </tr>
                     <tr>
                     <td> Alamat </td>
                     <td> : </td>
-                    <td> &nbsp; </td>
+                    <td> &nbsp; Jalan Raya Palembang-Prabumulih KM 32
+ </td>
                     </tr>
                     <tr>
                     <td> Hobby </td>
                     <td> : </td>
-                    <td> &nbsp;Membaca </td>
+                    <td> &nbsp;Apapun yang bermanfaat </td>
                     </tr>
 
                 </table>
