--- a/profil4.html
+++ b/profil4.html
@@ -54,22 +54,23 @@
                     <tr> 
                     <td> NiM </td>
                     <td> : </td>
-                    <td> &nbsp;</td>
+                    <td> &nbsp;09021181520005</td>
                     </tr>
                     <tr>
                     <td> Tempat/Tgl Lahir&nbsp; </td>
                     <td> : </td>
-                    <td> &nbsp; </td>
+                    <td> &nbsp;Bima, 06 Januari 1999 </td>
                     </tr>
                     <tr>
                     <td> Email </td>
                     <td> : </td>
-                    <td> &nbsp; </td>
+                    <td> &nbsp;imassy99@gmail.com </td>
                     </tr>
                     <tr>
                     <td> Alamat </td>
                     <td> : </td>
-                    <td> &nbsp; </td>
+                    <td> &nbsp;Wisma Amanah, jl. Nusantara
+ </td>
                     </tr>
                     <tr>
                     <td> Hobby </td>
