--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="featurette">
         <h4 class="featurette-heading">Deskripsi Singkat Metode Regresi Linear</h4>
         <p class="p">
-            <ol type="A">
+            <ol type="1">
                 <li>Merupakan metode Statistik untuk menguji sejauh mana hubungan sebab akibat antara Variabel Faktor Penyebab/Predictator (X) terhadap Variabel Akibatnya/Response(Y). 
                 </li>
         
@@ -115,17 +115,15 @@
       </div>
 
           <div class="featurette">
-        <h4 class="featurette-heading">Kebutuhan Fungsional
-</h4>
+        <h4 class="featurette-heading">Kebutuhan Fungsional</h4>
         <p class="p">
             <ol type="1">
                 <li>Terdapat Login Administrator, Operator gudang, dan Pimpinan
-
                 </li>
         
                 <li>Menampilkan Halaman utama yang didalamnya terdapat menu (management)
-
                 </li>
+
                 <li>Adminstrator dapat melakukan input data
                 </li>
 
@@ -155,9 +153,7 @@
       </div>
 
       <div class="featurette">
-        <h4 class="featurette-heading">Kebutuhan Non-Fungsional
-
-</h4>
+        <h4 class="featurette-heading">Kebutuhan Non-Fungsional</h4>
         <p class="p">
             <ol type="1">
                 <li>Mempermudah Dalam Pencarian Data
@@ -187,15 +183,11 @@
                 </li>
 
                 <li>Aktor supplier dan customer diperlukan hanya untuk menggambarkan bagaimana suatu perusahaan bisa beraktivitas. 
-
                 </li>
 
             </ol> 
         </p>
       </div>
-
-
-  
 
 	</section>
 	
