--- a/profil1.html
+++ b/profil1.html
@@ -68,6 +68,18 @@
                     <td> : </td>
                     <td> &nbsp;tioriasihombing56@gmail.com </td>
                     </tr>
+                    <td> Facebook </td>
+                    <td> : </td>
+                    <td> &nbsp;Tioria Sihombing </td>
+                    </tr>
+                    <td> Instagram </td>
+                    <td> : </td>
+                    <td> &nbsp;@riaaa_ng </td>
+                    </tr>
+                    <td> Line </td>
+                    <td> : </td>
+                    <td> &nbsp;@tioriasihombing </td>
+                    </tr>
                     <tr>
                     <td> Alamat </td>
                     <td> : </td>
