--- a/profil2.html
+++ b/profil2.html
@@ -42,6 +42,8 @@
         <div class="featurette">
             <img class="featurette-image img-circle pull-center" src="foto/jerni.jpg" width="300px" height="300px">
             <br><br><br>
+            <h5>Analis</h5>
+            <br><br>
             <h3>
 
                 <td> 
@@ -65,6 +67,18 @@
                     <td> Email </td>
                     <td> : </td>
                     <td> &nbsp;jerninssimanjuntak88@gmail.com</td>
+                    </tr>
+                    <td> Facebook </td>
+                    <td> : </td>
+                    <td> &nbsp;Nova Suryani Juntak </td>
+                    </tr>
+                    <td> Instagram </td>
+                    <td> : </td>
+                    <td> &nbsp;@jnsim </td>
+                    </tr>
+                    <td> Line </td>
+                    <td> : </td>
+                    <td> &nbsp;@jerninovasuryani </td>
                     </tr>
                     <tr>
                     <td> Alamat </td>
