--- a/profil3.html
+++ b/profil3.html
@@ -41,6 +41,8 @@
         <div class="featurette">
             <img class="featurette-image img-circle pull-center" src="foto/okta.jpg" width="300px" height="300px">
             <br><br><br>
+            <h5>Web Design</h5>
+            <br><br>
             <h3>
 
                 <td> 
@@ -65,11 +67,23 @@
                     <td> : </td>
                     <td> &nbsp;oktrariapermatasari15@gmail.com </td>
                     </tr>
+                    <td> Facebook </td>
+                    <td> : </td>
+                    <td> &nbsp;Oktaria Permata Sari </td>
+                    </tr>
+                    <td> Instagram </td>
+                    <td> : </td>
+                    <td> &nbsp;@oktariapermatasari </td>
+                    </tr>
+                    <td> Line </td>
+                    <td> : </td>
+                    <td> &nbsp;@oktariapermatasari </td>
+                    </tr>
                     <tr>
                     <td> Alamat </td>
                     <td> : </td>
                     <td> &nbsp; Jalan Raya Palembang-Prabumulih KM 32
- </td>
+                    </td>
                     </tr>
                     <tr>
                     <td> Hobby </td>
