--- a/profil4.html
+++ b/profil4.html
@@ -42,6 +42,8 @@
         <div class="featurette">
             <img class="featurette-image img-circle pull-center" src="foto/imas.jpg" width="300px" height="300px">
             <br><br><br>
+            <h5>Web Design</h5>
+            <br><br>
             <h3>
 
                 <td> 
@@ -66,11 +68,23 @@
                     <td> : </td>
                     <td> &nbsp;imassy99@gmail.com </td>
                     </tr>
+                    <td> Facebook </td>
+                    <td> : </td>
+                    <td> &nbsp;Imas Syaibun Nisa </td>
+                    </tr>
+                    <td> Instagram </td>
+                    <td> : </td>
+                    <td> &nbsp;@syaibunnys </td>
+                    </tr>
+                    <td> Line </td>
+                    <td> : </td>
+                    <td> &nbsp;@syaibun99 </td>
+                    </tr>
                     <tr>
                     <td> Alamat </td>
                     <td> : </td>
                     <td> &nbsp;Wisma Amanah, jl. Nusantara
- </td>
+                    </td>
                     </tr>
                     <tr>
                     <td> Hobby </td>
