--- a/profil4.html
+++ b/profil4.html
@@ -33,6 +33,20 @@
 
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" background="img/bgprofile.jpg">
+<!-- Navigation --> 
+    <nav class="navbar navbar-custom navbar-static-top" role="navigation"> 
+        <div class="container"> 
+            <div class="navbar-header"> 
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> 
+                    <i class="fa fa-bars"></i> 
+                </button> 
+                <a href="index.html"> 
+                   <span class="light"> Tijos</span> 
+                </a> 
+            </div> 
+        </div> 
+    </nav>
+
 
     <center>
         <br><br>
@@ -54,7 +68,7 @@
                     <td> &nbsp;Imas Syaibun Nisa </td>
                     </tr>
                     <tr> 
-                    <td> NiM </td>
+                    <td> NIM </td>
                     <td> : </td>
                     <td> &nbsp;09021181520005</td>
                     </tr>
@@ -83,7 +97,7 @@
                     <tr>
                     <td> Alamat </td>
                     <td> : </td>
-                    <td> &nbsp;Wisma Amanah, jl. Nusantara
+                    <td> &nbsp;Wisma Amanah, Jl. Nusantara
                     </td>
                     </tr>
                     <tr>
