--- a/profil3.html
+++ b/profil3.html
@@ -33,6 +33,21 @@
 
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" background="img/bgprofile.jpg">
+<!-- Navigation --> 
+    <nav class="navbar navbar-custom navbar-static-top" role="navigation"> 
+        <div class="container"> 
+            <div class="navbar-header"> 
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> 
+                    <i class="fa fa-bars"></i> 
+                </button> 
+                <a href="index.html"> 
+                   <span class="light"> Tijos</span> 
+                </a> 
+            </div> 
+        </div> 
+    </nav>
+
+
     <center>
         <br><br>
         <h1> Hello, This is my Bio </h1>
