--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                     <li>
                         <a class="page-scroll" href="#about">About Us</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact Us</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -86,7 +89,7 @@
 
 <!-- Project Section -->
 
-    <section id="project" class="container content-section">
+<section id="project" class="container content-section">
     <br><br>
     <div class="container">
     <hr>
@@ -119,27 +122,16 @@
         <h2>Kebutuhan Fungsional</h2>
         <p class="p">
             <ol type="1">
-                <li>Terdapat Login Administrator, Operator gudang, dan Pimpinan
+                <li>Sistem dapat mengelolah data, mengupdate data dan menampilkan hasil pengolahan data
+
                 </li>
         
-                <li>Menampilkan halaman utama yang didalamnya terdapat menu (management)
+                <li>Sistem dapat memprediksi jumlah barang yang akan laku
+
                 </li>
 
-                <li>Adminstrator dapat melakukan input data
+                <li>Portability yaitu dapat diakses dengan web browser perangkat PC
                 </li>
-
-                <li>Terdapat fungsi untuk melakukan proses tambah, update dan delete data
-                </li>
-
-                <li>Menampilkan jumlah barang yang laku pada satu waktu
-                </li>
-
-                <li>Menghasilkan Prediksi/peramalan jumlah barang yang akan laku pada periode waktu berikutnya
-                </li>
-
-                <li>Dapat menampilkan keakuratan Data
-                </li>
-
             </ol> 
         </p>
       </div>
@@ -148,11 +140,12 @@
         <h2>Kebutuhan Non-Fungsional</h2>
         <p class="p">
             <ol type="1">
-                <li>Usability : Mudah Dalam Pencarian Data
+                <li>Usability : mempermudah dlam pencarian data
                 </li>
-                <li>Fiendly: Memiliki Tampilan Sistem menarik
+                <li>Berjalan dengan Seharusnya
                 </li>
-
+                <li>Fiendly: memiliki tampilan sistem menarik
+                </li>
             </ol> 
         </p>
       </div>
@@ -206,45 +199,118 @@
 
 <!-- About Us -->
 <section id="about">	
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">About Us
-                    </h2>
-                    <hr>
-                </div>
-                <div class="col-sm-3 text-center">
-                    <img class="img-circle" src="foto/Tioria.jpg" alt="" width="250" height="250">
-                    <h3>Tioria Sihombing
-                        <p><a class="btn btn-secondary buttonAbout" href="profil1.html" role="button">View details &raquo;</a></p>
-                    </h3>
-                </div>
-                    
-                <div class="col-sm-3 text-center">
-                    <img class="img-circle" src="foto/jerni.jpg" alt="" width="250" height="250">
-                    <h3>Jerni Simanjuntak
-                        <p><a class="btn btn-secondary buttonAbout" href="profil2.html" role="button">View details &raquo;</a></p>
-                    </h3>
-                </div>
-                <div class="col-sm-3 text-center">
-                    <img class="img-circle" src="foto/okta.jpg" alt="" width="250" height="250">
-                    <h3>Oktaria Permata Sari<br>
-                        <p><a class="btn btn-secondary buttonAbout" href="profil3.html" role="button">View details &raquo;</a></p>
-                    </h3>
-                </div>
-				<div class="col-sm-3 text-center">
-                    <img class="img-circle" src="foto/imas.jpg" alt="" width="250" height="250">
-                    <h3>Imas Syaibun Nisa
-                        <p><a class="btn btn-secondary buttonAbout" href="profil4.html" role="button">View details &raquo;</a></p>
-                    </h3>
-                </div>
-                <div class="clearfix"></div>
+    <div class="container">
+    <br><br>
+    <div class="row">
+        <div class="box">
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center">About Us
+                </h2>
+                <hr>
+            </div>                
+            <div class="col-sm-3 text-center">
+                <img class="img-circle" src="foto/Tioria.jpg" alt="" width="250" height="250">
+                <h3>Tioria Sihombing
+                    <p><a class="btn btn-secondary buttonAbout" href="profil1.html" role="button">View details &raquo;</a></p>
+                </h3>
+            </div>                    
+            <div class="col-sm-3 text-center">
+                <img class="img-circle" src="foto/jerni.jpg" alt="" width="250" height="250">
+                <h3>Jerni Simanjuntak
+                    <p><a class="btn btn-secondary buttonAbout" href="profil2.html" role="button">View details &raquo;</a></p>
+                </h3>
             </div>
-        </div>
+            <div class="col-sm-3 text-center">
+                <img class="img-circle" src="foto/okta.jpg" alt="" width="250" height="250">
+                <h3>Oktaria Permata Sari<br>
+                    <p><a class="btn btn-secondary buttonAbout" href="profil3.html" role="button">View details &raquo;</a></p>
+                </h3>
+            </div>
+            <div class="col-sm-3 text-center">
+                <img class="img-circle" src="foto/imas.jpg" alt="" width="250" height="250">
+                <h3>Imas Syaibun Nisa
+                    <p><a class="btn btn-secondary buttonAbout" href="profil4.html" role="button">View details &raquo;</a></p>
+                </h3>
+                <br><br><br><br><br>
+            </div>
+            <div class="clearfix"></div>
 
+        </div>
     </div>
-	</section>
+</section>
+
+<!-- Contact Us -->
+<section id="contact"> 
+    <br><br>
+    <div class="container"> 
+    <div class="row">
+        <div>
+        <hr>
+        <h2 class="intro-text text-center">Contact Us
+        </h2>
+        <hr>
+        </div>
+        <br>
+        <div align="center">
+            <form name="htmlform" method="post" action="html_form_send.php">
+                <table width="450px">
+                    <tr>
+                        <td valign="top">
+                            <label for="first_name">First Name *</label>
+                        </td>
+                        <td valign="top">
+                            <input  type="text" name="first_name" maxlength="50" size="45">
+                        </td>
+                    </tr>
+ 
+                    <tr>
+                        <td valign="top"">
+                            <label for="last_name">Last Name *</label>
+                        </td>
+                        <td valign="top">
+                            <input  type="text" name="last_name" maxlength="50" size="45">
+                        </td>
+                        </tr>
+                    <tr>
+                        <td valign="top">
+                            <label for="email">Email Address *</label>
+                        </td>
+                        <td valign="top">
+                            <input  type="text" name="email" maxlength="80" size="45">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top">
+                        <label for="telephone">Telephone </label>
+                        </td>
+                        <td valign="top">
+                            <input  type="text" name="telephone" maxlength="30" size="45">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td valign="top">
+                            <label for="comments">Comments *</label>
+                        </td>
+                        <td valign="top">
+                            <textarea  name="comments" maxlength="1000" cols="40" rows="6"></textarea>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" style="text-align:center">
+                            <input type="submit" value="Send Email" class="btn btn-info btn-sm">  
+                            <br><br><br><br>
+                        </td>
+                    </tr>
+                </table>
+            </form>
+        </div>      
+    </div>
+</section>
+
+
+
+
     <!-- Footer -->
     <footer>
         <div class="container text-center">
